# bandency

./: .envrc  .gitattributes  .gitignore  README.md  alembic.ini  controller.py  luftdatenexplorer.ipynb  playground.ipynb  requirements.txt  setup.py  test.yaml
alembic/: env.py
challenger/: .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle  settings.gradle
controller/: servermonitor.py  vmmanager.py
deploy/: baseline.yaml  flink-demo.yaml  job.yaml  kafka-test.yaml  mongodb.yaml
event_proc/: docker-compose-gc21.yaml  docker-compose-standalone.yaml  requirements.txt
fetchdata/: fetchluftdaten.py
frontend/: admin.py  helper.py  models.py  webserver.py  worker.py
httprpc/: Cargo.toml  README.md  build.rs
httprpc/proto/: challenger.proto
httprpc/src/: api.rs  grpc.rs  proxy.rs  server.rs
javaexample/: build.gradle
kube/: k3d.sh  k3s.sh
notes/: notes.md
query/: .gitignore  .python-version  2021_q1.py  2021_q1_alternativeimpl.py  2021_q1_alternativeimpl_tests.py  2021_q2.py  2021_q2_longeststreak.py  2021_q2_streakhistogram_final.py  challenger_pb2.py  challenger_pb2_grpc.py  epa.py  event_proc.py  event_processor.py  example.py  example_down.py  experiment.py  generate.sh  program.prof  q1-1029.json  q1-1978.json  q1-2850.json  q1-3887.json  q1-4942.json  q1-5996.json  q1-7046.json  q1-8118.json  q1-9179.json  q1.py  q12_refactored.py  q1_alternativeimpl.py  q1_alternativeimpl_tests.py  q2-1029.json  q2-1978.json  q2-2850.json  (+13 more)
query-java/: .envrc  .gitignore  build.gradle
query/2025/refImpl/: Dockerfile  pyproject.toml  solution.py
(+268 files in other folders)
